--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-  --color-primary: #4b69fd;
+  --color-primary: #4bb3ab;
   --color-secondary: #fff9eb;
-  --color-tertiary: #c4c4c4;
-  --color-button: #fe652b;
-  --color-button-hover: #e55720;
+  --color-tertiary: #ffb097;
+  --color-button: #ffb097;
+  --color-button-hover: #ff9574;
   --color-text: #444444;
   --color-white: #ffffff;
 }
@@ -82,7 +82,7 @@ body {
 .input-name {
   width: 100%;
   padding: 10px;
-  border: 2px solid #000;
+  border: 0.1px solid #444444;
   border-radius: 25px 0 0 25px;
   font-size: 16px;
 }
@@ -110,7 +110,7 @@ button {
   padding: 15px 30px;
   font-family: "Inter", sans-serif;
   font-size: 16px;
-  border: 2px solid #000;
+  border: 0.1px solid #000;
   border-radius: 25px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   cursor: pointer;
@@ -123,7 +123,7 @@ button {
 }
 
 .button-add:hover {
-  background-color: #a1a1a1;
+  background-color: #ff9574;
 }
 
 /* Listas */
